--- a/tests/subsys/logging/log_core_additional/prj.conf
+++ b/tests/subsys/logging/log_core_additional/prj.conf
@@ -2,6 +2,7 @@ CONFIG_MAIN_THREAD_PRIORITY=5
 CONFIG_ZTEST=y
 CONFIG_TEST_LOGGING_DEFAULTS=n
 CONFIG_LOG=y
+CONFIG_LOG_OUTPUT=y
 CONFIG_LOG_PRINTK=n
 CONFIG_LOG_SPEED=y
 CONFIG_LOG_BUFFER_SIZE=1024
