[nrf noup] scripts: Add new test cases to quarantine
squash! [nrf noup] scripts: add quarantine file

A few test cases that were added upstream fail to build due to the lack
of the g++-multilib package in the currently used docker image.
Add them to the related section in the quarantine file.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/scripts/quarantine.yaml
+++ b/scripts/quarantine.yaml
@@ -163,6 +163,12 @@
     - logging.log_api_immediate_rt_filter_cpp.tagged_args
     - logging.log_api_immediate_static_filter_cpp
     - logging.log_api_immediate_static_filter_cpp.tagged_args
+    - testing.fail.zephyr.assert_after
+    - testing.fail.zephyr.assert_teardown
+    - testing.fail.zephyr.assume_after
+    - testing.fail.zephyr.assume_teardown
+    - testing.fail.zephyr.pass_after
+    - testing.fail.zephyr.pass_teardown
     - testing.ztest.base.cpp
   platforms:
     - native_posix
