--- a/boards/arm/actinius_icarus_bee/dts/bindings/sim-select.yaml
+++ b/boards/arm/actinius_icarus_bee/dts/bindings/sim-select.yaml
@@ -7,7 +7,7 @@ description: |
   external nano-SIM. The SIM can be selected by changing the `sim` property
   of the `sim_select` dt node to `esim` or `external`.
 
-compatible: "actinius-sim-select"
+compatible: "sim-select"
 
 include: base.yaml
 
