--- a/boards/arm/sensortile_box/sensortile_box.dts
+++ b/boards/arm/sensortile_box/sensortile_box.dts
@@ -47,7 +47,6 @@
 		magn0 = &lis2mdl;
 		accel0 = &lis2dw12;
 		accel1 = &lsm6dso;
-		accel2 = &iis3dhhc;
 	};
 };
 
@@ -148,7 +147,7 @@
 		int-pin = <1>;
 	};
 
-	iis3dhhc: iis3dhhc@2 {
+	iis3dhhc@2 {
 		compatible = "st,iis3dhhc";
 		spi-max-frequency = <1000000>;
 		reg = <2>;
