--- a/drivers/sensor/adxl345/Kconfig
+++ b/drivers/sensor/adxl345/Kconfig
@@ -7,7 +7,6 @@ config ADXL345
 	bool "ADXL345 Three Axis accelerometer"
 	default y
 	depends on DT_HAS_ADI_ADXL345_ENABLED
-	select I2C if $(dt_compat_on_bus,$(DT_COMPAT_ADI_ADXL345),i2c)
-	select SPI if $(dt_compat_on_bus,$(DT_COMPAT_ADI_ADXL345),spi)
+	depends on I2C || SPI
 	help
 	  Enable driver for ADXL345 Three-Axis Digital Accelerometer.
