--- a/drivers/sensor/bmm150/Kconfig
+++ b/drivers/sensor/bmm150/Kconfig
@@ -7,7 +7,7 @@ menuconfig BMM150
 	bool "BMM150 I2C Geomagnetic Chip"
 	default y
 	depends on DT_HAS_BOSCH_BMM150_ENABLED
-	select I2C
+	depends on I2C
 	help
 	  Enable driver for BMM150 I2C-based Geomagnetic sensor.
 if BMM150
