--- a/drivers/sensor/hmc5883l/Kconfig
+++ b/drivers/sensor/hmc5883l/Kconfig
@@ -5,7 +5,7 @@ menuconfig HMC5883L
 	bool "HMC5883L magnetometer"
 	default y
 	depends on DT_HAS_HONEYWELL_HMC5883L_ENABLED
-	select I2C
+	depends on I2C
 	help
 	  Enable driver for HMC5883L I2C-based magnetometer.
 
