--- a/drivers/sensor/lis2mdl/Kconfig
+++ b/drivers/sensor/lis2mdl/Kconfig
@@ -5,8 +5,7 @@ menuconfig LIS2MDL
 	bool "LIS2MDL Magnetometer"
 	default y
 	depends on DT_HAS_ST_LIS2MDL_ENABLED
-	select I2C if $(dt_compat_on_bus,$(DT_COMPAT_ST_LIS2MDL),i2c)
-	select SPI if $(dt_compat_on_bus,$(DT_COMPAT_ST_LIS2MDL),spi)
+	depends on I2C || SPI
 	select HAS_STMEMSC
 	select USE_STDC_LIS2MDL
 	help
