--- a/drivers/sensor/lm75/Kconfig
+++ b/drivers/sensor/lm75/Kconfig
@@ -7,7 +7,7 @@ config LM75
 	bool "LM75 Temperature Sensor"
 	default y
 	depends on DT_HAS_LM75_ENABLED
-	select I2C
+	depends on I2C
 	help
 	  Enable the driver for the LM75 digital temperature Sensor with 2-wire
 	  interface. Thermal Watchdog is not implemented
