Revert "[nrf fromtree] boards: Set devicetree alias for ST LSM6DSL nodes"
This reverts commit 73892037538bff0cf06e209fdd8c63cbf846a0ef.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/boards/arm/b_l4s5i_iot01a/b_l4s5i_iot01a.dts
+++ b/boards/arm/b_l4s5i_iot01a/b_l4s5i_iot01a.dts
@@ -44,7 +44,6 @@
 		led0 = &green_led_1;
 		sw0 = &user_button;
 		watchdog0 = &iwdg;
-		accel0 = &lsm6dsl;
 	};
 };
 
@@ -113,7 +112,7 @@
 		label = "LPS22HB";
 	};
 
-	lsm6dsl: lsm6dsl@6a {
+	lsm6dsl@6a {
 		compatible = "st,lsm6dsl";
 		reg = <0x6a>;
 		irq-gpios = <&gpiod 11 GPIO_ACTIVE_HIGH>;
