--- a/boards/arm/96b_argonkey/96b_argonkey.dts
+++ b/boards/arm/96b_argonkey/96b_argonkey.dts
@@ -43,7 +43,6 @@
 		led0 = &green_led_0;
 		led1 = &green_led_1;
 		sw0 = &user_button;
-		accel0 = &lsm6dsl;
 	};
 };
 
@@ -95,7 +94,7 @@
 	status = "okay";
 
 	/* ST Microelectronics LSM6DSL accel/gyro sensor */
-	lsm6dsl: lsm6dsl@1 {
+	lsm6dsl@1 {
 		compatible = "st,lsm6dsl";
 		reg = <1>;
 		spi-max-frequency = <1000000>;
