--- a/boards/arm/sensortile_box/sensortile_box.dts
+++ b/boards/arm/sensortile_box/sensortile_box.dts
@@ -46,7 +46,6 @@
 		sw0 = &user_button;
 		magn0 = &lis2mdl;
 		accel0 = &lis2dw12;
-		accel1 = &lsm6dso;
 	};
 };
 
@@ -138,7 +137,7 @@
 		label = "LIS2DW12";
 	};
 
-	lsm6dso: lsm6dso@1 {
+	lsm6dso@1 {
 		compatible = "st,lsm6dso";
 		spi-max-frequency = <1000000>;
 		reg = <1>;
