Revert "[nrf fromtree] boards: Set devicetree alias for ST LIS2DH and compatible nodes"
This reverts commit 198435b92c6b96ef3470c7e72aa81ef38219abdc.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/boards/arm/nrf9160_innblue21/nrf9160_innblue21_common.dts
+++ b/boards/arm/nrf9160_innblue21/nrf9160_innblue21_common.dts
@@ -73,7 +73,6 @@
 		rgb-pwm  = &pwm0;
 		mode-pwm = &pwm1;
 		watchdog0 = &wdt0;
-		accel0 = &lis2dh12_accel;
 	};
 };
 
@@ -117,7 +116,7 @@
 	pinctrl-0 = <&i2c2_default>;
 	pinctrl-1 = <&i2c2_sleep>;
 	pinctrl-names = "default", "sleep";
-	lis2dh12_accel: lis2dh12-accel@19 {
+	lis2dh12-accel@19 {
 		compatible = "st,lis2dh";
 		reg = <0x19>;
 		irq-gpios = <&gpio0 0 0>, <&gpio0 1 0>;
