--- a/boards/arm/actinius_icarus_bee/actinius_icarus_bee_common.dts
+++ b/boards/arm/actinius_icarus_bee/actinius_icarus_bee_common.dts
@@ -123,6 +123,7 @@
 		reg = <0x19>;
 		irq-gpios = <&gpio0 28 GPIO_ACTIVE_HIGH>,
 			  <&gpio0 29 GPIO_ACTIVE_HIGH>;
+		label = "LIS2DH12-ACCEL";
 	};
 };
 
@@ -139,6 +140,7 @@
 		compatible = "jedec,spi-nor";
 		reg = <0>;
 		spi-max-frequency = <80000000>;
+		label = "W25Q64";
 		jedec-id = [ef 40 17];
 		size = <0x4000000>;
 		has-dpd;
