--- a/boards/arm/bbc_microbit/bbc_microbit.dts
+++ b/boards/arm/bbc_microbit/bbc_microbit.dts
@@ -48,6 +48,7 @@
 	led_matrix: led_matrix {
 		compatible = "nordic,nrf-led-matrix";
 		status = "okay";
+		label = "LED_MATRIX";
 		width = <5>;
 		height = <5>;
 		pixel-mapping = [00 13 01 14 02
@@ -135,6 +136,7 @@
 		compatible = "nxp,fxos8700", "nxp,mma8653fc";
 		status = "okay";
 		reg = <0x1d>;
+		label = "MMA8653FC";
 		int1-gpios = <&gpio0 28 GPIO_ACTIVE_LOW>;
 		int2-gpios = <&gpio0 27 GPIO_ACTIVE_LOW>;
 	};
@@ -144,6 +146,7 @@
 		compatible = "st,lis2mdl", "st,lsm303agr-magn";
 		status = "disabled";
 		reg = <0x1e>;
+		label = "LSM303AGR-MAGN";
 		irq-gpios = <&gpio0 27 GPIO_ACTIVE_HIGH>;	/* A3 */
 	};
 
@@ -151,6 +154,7 @@
 		compatible = "st,lis2dh", "st,lsm303agr-accel";
 		status = "disabled";
 		reg = <0x19>;
+		label = "LSM303AGR-ACCEL";
 		irq-gpios = <&gpio0 28 GPIO_ACTIVE_HIGH>;
 	};
 };
