--- a/boards/arm/blueclover_plt_demo_v2_nrf52832/blueclover_plt_demo_v2_nrf52832.dts
+++ b/boards/arm/blueclover_plt_demo_v2_nrf52832/blueclover_plt_demo_v2_nrf52832.dts
@@ -72,11 +72,13 @@
 	sht3xd@44 {
 		compatible = "sensirion,sht3xd";
 		reg = <0x44>;
+		label = "SHT3XD";
 	};
 
 	bmi270: bmi270@68 {
 		compatible = "bosch,bmi270";
 		reg = <0x68>;
+		label = "BMI270";
 	};
 };
 
@@ -99,6 +101,7 @@
 		compatible = "apa,apa102";
 		reg = <0>;
 		spi-max-frequency = <5250000>;
+		label = "APA102";
 	};
 };
 
