--- a/boards/arm/degu_evk/degu_evk.dts
+++ b/boards/arm/degu_evk/degu_evk.dts
@@ -58,6 +58,7 @@
 
 	en-3v3-switch {
 		compatible = "regulator-fixed-sync", "regulator-fixed";
+		label = "en_3v3_switch";
 		regulator-name = "en_3v3_switch";
 		enable-gpios = <&gpio0 26 GPIO_ACTIVE_HIGH>;
 		regulator-boot-on;
@@ -65,6 +66,7 @@
 
 	en-vin1-moni {
 		compatible = "regulator-fixed-sync", "regulator-fixed";
+		label = "en_vin1_moni";
 		regulator-name = "en_vin1_moni";
 		enable-gpios = <&gpio1 6 GPIO_ACTIVE_HIGH>;
 		regulator-boot-on;
@@ -159,5 +161,6 @@ zephyr_udc0: &usbd {
 
 	degu_cdc_acm_uart: degu_cdc_acm_uart {
 		compatible = "zephyr,cdc-acm-uart";
+		label = "CDC_ACM_0";
 	};
 };
