--- a/boards/arm/nrf21540dk_nrf52840/nrf21540dk_nrf52840.dts
+++ b/boards/arm/nrf21540dk_nrf52840/nrf21540dk_nrf52840.dts
@@ -232,6 +232,7 @@ fem_spi: &spi3 {
 		compatible = "nordic,nrf21540-fem-spi";
 		status = "okay";
 		reg = <0>;
+		label = "FEM_SPI_IF";
 		spi-max-frequency = <8000000>;
 	};
 };
