--- a/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
+++ b/boards/arm/ruuvi_ruuvitag/ruuvi_ruuvitag.dts
@@ -86,6 +86,7 @@
 		compatible = "bosch,bme280";
 		reg = <0>;
 		spi-max-frequency = <10000000>;
+		label= "BME280";
 	};
 
 	lis2dh12: lis2dh12@1 {
@@ -93,6 +94,7 @@
 		reg = <1>;
 		spi-max-frequency = <10000000>;
 		irq-gpios =  <&gpio0 2 GPIO_ACTIVE_HIGH>, <&gpio0 6 GPIO_ACTIVE_HIGH>;
+		label = "LIS2DH12-ACCEL";
 	};
 };
 
