--- a/boards/arm/blueclover_plt_demo_v2_nrf52832/blueclover_plt_demo_v2_nrf52832.dts
+++ b/boards/arm/blueclover_plt_demo_v2_nrf52832/blueclover_plt_demo_v2_nrf52832.dts
@@ -41,7 +41,6 @@
 		sw1 = &button1;
 		pwm-buzzer = &pwm0;
 		watchdog0 = &wdt0;
-		accel0 = &bmi270;
 	};
 };
 
@@ -75,7 +74,7 @@
 		label = "SHT3XD";
 	};
 
-	bmi270: bmi270@68 {
+	bmi270@68 {
 		compatible = "bosch,bmi270";
 		reg = <0x68>;
 		label = "BMI270";
