--- a/boards/arm/rak5010_nrf52840/rak5010_nrf52840.dts
+++ b/boards/arm/rak5010_nrf52840/rak5010_nrf52840.dts
@@ -35,7 +35,6 @@
 	aliases {
 		led0 = &led0;
 		watchdog0 = &wdt0;
-		accel0 = &lis3dh;
 	};
 };
 
@@ -98,8 +97,8 @@
 	};
 
 	/* ST Microelectronics LIS3DH motion sensor */
-	lis3dh: lis3dh@19 {
-		compatible = "st,lis3dh", "st,lis2dh";
+	lis3dh@19 {
+		compatible = "st,lis3dh";
 		label = "LIS3DH";
 		reg = <0x19>;
 		irq-gpios = <&gpio0 15 0>;
