--- a/.github/workflows/clang.yaml
+++ b/.github/workflows/clang.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
           access_token: ${{ github.token }}
   clang-build:
-    runs-on: ubuntu-latest
+    runs-on: zephyr_runner
     needs: clang-build-prep
     container:
       image: ghcr.io/zephyrproject-rtos/ci:v0.23.3
@@ -48,10 +48,8 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
           persist-credentials: false
-          path: ./zephyr
 
       - name: Environment Setup
-        working-directory: ./zephyr
         run: |
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           git config --global user.email "bot@zephyrproject.org"
@@ -69,7 +67,6 @@ jobs:
           west update --path-cache /github/cache/zephyrproject 2>&1 1> west.log || west update --path-cache /github/cache/zephyrproject 2>&1 1> west2.log || ( rm -rf ../modules ../bootloader ../tools && west update --path-cache /github/cache/zephyrproject)
 
       - name: Check Environment
-        working-directory: ./zephyr
         run: |
           cmake --version
           ${CLANG_ROOT_DIR}/bin/clang --version
@@ -77,7 +74,6 @@ jobs:
           ls -la
 
       - name: Prepare ccache timestamp/data
-        working-directory: ./zephyr
         id: ccache_cache_timestamp
         shell: cmake -P {0}
         run: |
@@ -97,13 +93,11 @@ jobs:
           aws-region: us-east-2
 
       - name: ccache stats initial
-        working-directory: ./zephyr
         run: |
           test -d github/home/.ccache && rm -rf /github/home/.ccache && mv github/home/.ccache /github/home/.ccache
           ccache -M 10G -s
 
       - name: Run Tests with Twister
-        working-directory: ./zephyr
         id: twister
         run: |
           export ZEPHYR_BASE=${PWD}
@@ -123,7 +117,6 @@ jobs:
           fi
 
       - name: ccache stats post
-        working-directory: ./zephyr
         run: |
           ccache -s
 
@@ -132,7 +125,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Unit Test Results (Subset ${{ matrix.platform }})
-          path: zephyr/twister-out/twister.xml
+          path: twister-out/twister.xml
 
   clang-build-results:
     name: "Publish Unit Tests Results"
