--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -12,9 +12,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0
-        path: ./zephyr
     - name: Run Maintainers Script
-      working-directory: ./zephyr
       id: maintainer
       env:
         BASE_REF: ${{ github.base_ref }}
@@ -34,7 +32,6 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0
-        path: ./zephyr
 
     - name: cache-pip
       uses: actions/cache@v1
@@ -50,7 +47,6 @@ jobs:
         pip3 install west
 
     - name: west setup
-      working-directory: ./zephyr
       env:
         BASE_REF: ${{ github.base_ref }}
       run: |
@@ -66,7 +62,6 @@ jobs:
         west update 2>&1 1> west.update.log || west update 2>&1 1> west.update2.log
 
     - name: Run Compliance Tests
-      working-directory: ./zephyr
       continue-on-error: true
       id: compliance
       env:
@@ -83,10 +78,9 @@ jobs:
       continue-on-error: True
       with:
         name: compliance.xml
-        path: zephyr/compliance.xml
+        path: compliance.xml
 
     - name: check-warns
-      working-directory: ./zephyr
       run: |
         if [[ ! -s "compliance.xml" ]]; then
           exit 1;
