[nrf fromtree] drivers: sensor: ina23x: s/rshunt/rshunt-milliohms
Following dtschema practices, add phyisical units to the shunt resistor
value: milliohms.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>
(cherry picked from commit a79f5b87c0433ca5eaecf44350dc92334f4f5db1)

--- a/dts/bindings/sensor/ti,ina23x-common.yaml
+++ b/dts/bindings/sensor/ti,ina23x-common.yaml
@@ -27,7 +27,7 @@ properties:
         results in Current, Voltage, and Power registers
         being read in counts.
 
-    rshunt:
+    rshunt-milliohms:
       type: int
       required: true
       description: Shunt resistor value in milliohms
