--- a/boards/arm/stm32g071b_disco/stm32g071b_disco.dts
+++ b/boards/arm/stm32g071b_disco/stm32g071b_disco.dts
@@ -145,8 +145,7 @@
 			INA230_AVG_MODE_1)>;
 		/* Set current LSB to 1mA */
 		current-lsb = <1>;
-		/* Set shunt resistor value to 15 milliohms */
-		rshunt = <15>;
+		rshunt-milliohms = <15>;
 	};
 };
 
