--- a/.github/workflows/clang.yaml
+++ b/.github/workflows/clang.yaml
@@ -7,8 +7,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  clang-build-prep:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.6.0
+        with:
+          access_token: ${{ github.token }}
   clang-build:
-    runs-on: zephyr-runner-linux-x64-4xlarge
+    runs-on: ubuntu-latest
+    needs: clang-build-prep
     container:
       image: ghcr.io/zephyrproject-rtos/ci:v0.24.5
       options: '--entrypoint /bin/bash'
