--- a/subsys/net/lib/lwm2m/Kconfig
+++ b/subsys/net/lib/lwm2m/Kconfig
@@ -6,6 +6,7 @@ menuconfig LWM2M
 	select COAP
 	select HTTP_PARSER_URL
 	select NET_SOCKETS
+	select NET_SOCKETS_POSIX_NAMES
 	help
 	  This option adds logic for managing OMA LWM2M data
 
