[nrf fromtree] drivers: sensor: ina23x: s/irq-gpios/alert-gpios
The sensor uses the ALERT terminology (pin can be configured to trigger
on certain events such as conversion ready or overvoltage alerts). The
"IRQ" name is not clear.

Signed-off-by: Gerard Marull-Paretas <gerard.marull@nordicsemi.no>
(cherry picked from commit af722062c17793fc1c197ebd2bf1990b6995e299)

--- a/dts/bindings/sensor/ti,ina23x-common.yaml
+++ b/dts/bindings/sensor/ti,ina23x-common.yaml
@@ -38,3 +38,8 @@ properties:
       type: int
       required: true
       description: Shunt resistor value in milliohms
+
+    alert-gpios:
+      type: phandle-array
+      required: false
+      description: Alert pin
