[nrf fromtree] ipc: ipc_service: icmsg: Increase reliability of bonding
This commit changes the way bonding between endpoints is processed.
There is no blind attempt to read the buffer without mbox notification.
On second side the notification is repeated multiple times until valid
bonding is detected.

Signed-off-by: Radoslaw Koppel <radoslaw.koppel@nordicsemi.no>
(cherry picked from commit 0620cb1fe1807a4a0e1ea83b300138d27b7fc175)

--- a/subsys/ipc/ipc_service/backends/Kconfig
+++ b/subsys/ipc/ipc_service/backends/Kconfig
@@ -89,5 +89,13 @@ config SYSTEM_WORKQUEUE_PRIORITY
 	depends on IPC_SERVICE_ICMSG
 	range -256 -1
 
+config IPC_SERVICE_BACKEND_ICMSG_BOND_NOTIFY_REPEAT_TO_MS
+	int "Bond notification timeout in miliseconds"
+	range 1 100
+	default 1
+	help
+	  Time to wait for remote bonding notification before the
+	  notification is repeated.
+
 rsource "Kconfig.icmsg_me"
 rsource "Kconfig.rpmsg"
