modules: tfm: Add Kconfig for PSA arch tests
This add a Kconfig option which allow the PSA
arch tests to add an out of tree include folder.
Also it allows settting a custom name for the
crypto configuration header file used by the
tests.
The Kconfig options are propagaded in TF-M
through CMake.

Signed-off-by: Georgios Vasilakis <georgios.vasilakis@nordicsemi.no>

--- a/modules/trusted-firmware-m/CMakeLists.txt
+++ b/modules/trusted-firmware-m/CMakeLists.txt
@@ -171,6 +171,15 @@ if (CONFIG_BUILD_WITH_TFM)
     set(COMBINE_DIR_CRYPTO crypto)
     set(COMBINE_DIR_INITIAL_ATTESTATION initial_attestation)
     set(PSA_TEST_COMBINE_FILE ${TFM_BINARY_DIR}/tf-m-tests/app/psa_api_tests/dev_apis/${COMBINE_DIR_${TFM_PSA_TEST_SUITE}}/test_combine.a)
+
+  if(CONFIG_TFM_PSA_TEST_CUSTOM_INCLUDE_DIR)
+    list(APPEND TFM_CMAKE_ARGS -DTFM_PSA_TEST_CUSTOM_INCLUDE_DIR="${CONFIG_TFM_PSA_TEST_CUSTOM_INCLUDE_DIR}")
+  endif()
+
+  if(CONFIG_TFM_PSA_TEST_CRYPTO_CUSTOM_PAL_CFG)
+    list(APPEND TFM_CMAKE_ARGS -DTFM_PSA_TEST_CRYPTO_CUSTOM_PAL_CFG="${CONFIG_TFM_PSA_TEST_CRYPTO_CUSTOM_PAL_CFG}")
+  endif()
+
   endif()
 
   if(CONFIG_TFM_BL2)
